tests/data/libsvm/invalid/zero_based_features.libsvm
1 0:-1.117827500607882 1:-2.9087188881250993 2:0.66638344270039144 3:1.0978832703949288
1 0:-0.5282118298909262 1:-0.335880984968183973 2:0.51687296029754564 3:0.54604461446026
0 0:0.57650218263054642 1:1.01405596624706053 2:0.13009428079760464 3:0.7261913886869387
0 0:-0.20981208921241892 1:0.60276937379453293 2:-0.13086851759108944 3:0.10805254527169827
0 0:1.88494043717792 1:1.00518564317278263 2:0.298499933047586044 3:1.6464627048813514